--- a/utilities/src/main/AndroidManifest.xml
+++ b/utilities/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.md2k.utilities">
 
     <application android:allowBackup="true" android:label="@string/app_name">
+        <activity
+            android:theme="@android:style/Theme.Holo.Light.Dialog"
+            android:name=".UI.ActivityError"
+            android:label="Error" >
+        </activity>
 
     </application>
 
