--- a/utilities/build.gradle
+++ b/utilities/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.code.gson:gson:2.3.1'
     compile project(':datakitapi')
+    compile 'com.android.support:support-v4:22.2.1'
 }
