--- a/utilities/src/main/AndroidManifest.xml
+++ b/utilities/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:theme="@style/AppThemeTealLight">
+        android:theme="@style/app_theme_teal_light">
         <activity
             android:name="org.md2k.utilities.UI.ActivityAbout"
             android:icon="@drawable/ic_info_teal_48dp"
