--- a/utilities/build.gradle
+++ b/utilities/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.google.code.gson:gson:2.3.1'
     compile project(':datakitapi')
     compile 'com.android.support:appcompat-v7:23.1.1'
