--- a/utilities/build.gradle
+++ b/utilities/build.gradle
@@ -53,16 +53,16 @@ dependencies {
     //plugin for icons
     compile 'com.mikepenz:iconics-core:2.8.1@aar'
     compile 'com.mikepenz:fontawesome-typeface:4.7.0.0@aar'
-    compile 'com.mikepenz:google-material-typeface:2.2.0.3.original@aar'
+//    compile 'com.mikepenz:google-material-typeface:2.2.0.3.original@aar'
 
     //plugin for fonts
-    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+//    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
 
     //plugin for dialogbox
     compile 'com.afollestad.material-dialogs:core:0.9.2.1'
 
     //plugin for about dialog
-    compile 'com.github.daniel-stoneuk:material-about-library:1.3.0'
+//    compile 'com.github.daniel-stoneuk:material-about-library:1.3.0'
 
     //plugin for crashlytics
     compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
@@ -80,5 +80,12 @@ dependencies {
 
     // android bootstrap
     compile 'com.beardedhen:androidbootstrap:2.3.1'
+
+    // add rxAndroid
+    compile 'io.reactivex:rxandroid:1.2.1'
+// Because RxAndroid releases are few and far between, it is recommended you also
+// explicitly depend on RxJava's latest version for bug fixes and new features.
+    compile 'io.reactivex:rxjava:1.1.6'
+
 
 }
