--- a/utilities/src/main/AndroidManifest.xml
+++ b/utilities/src/main/AndroidManifest.xml
@@ -19,9 +19,10 @@
             android:icon="@drawable/ic_copyright_teal_48dp"
             android:label="Copyright"
             android:screenOrientation="portrait" />
-        <activity
+<!--        <activity
             android:name=".about.ActivityAbout"
             android:theme="@style/AppTheme.MaterialAboutActivity" />
+            -->
     </application>
 
 </manifest>
