--- a/utilities/build.gradle
+++ b/utilities/build.gradle
@@ -2,12 +2,12 @@ version = '1.0.1'
 
 
 apply plugin: 'com.android.library'
-apply plugin: 'io.fabric'  //plugin for crashlytics
+//apply plugin: 'io.fabric'  //plugin for crashlytics
 apply from: 'versioning.gradle'
 
 buildscript {
     repositories {
-        maven { url 'https://maven.fabric.io/public' }
+//        maven { url 'https://maven.fabric.io/public' }
         maven { url 'https://jitpack.io' }
         mavenCentral()
     }
@@ -18,25 +18,39 @@ buildscript {
 
         // We recommend changing it to the latest version from our changelog:
         // https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
-        classpath 'io.fabric.tools:gradle:1.+'
+//        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
 repositories {
-    maven { url 'https://maven.fabric.io/public' }
+//    maven { url 'https://maven.fabric.io/public' }
     maven { url 'https://jitpack.io' }
     mavenCentral()
 }
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '25.0.2'
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 25
         versionCode buildVersionCode()
         versionName version
+        multiDexEnabled true
     }
+/*
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+*/
+/*
+    dexOptions {
+        // Skip pre-dexing when running on Travis CI or when disabled via -Dpre-dex=false.
+        preDexLibraries = preDexEnabled && !travisBuild
+    }
+*/
+
     buildTypes {
         release {
             minifyEnabled false
@@ -65,9 +79,11 @@ dependencies {
 //    compile 'com.github.daniel-stoneuk:material-about-library:1.3.0'
 
     //plugin for crashlytics
+/*
     compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
         transitive = true;
     }
+*/
     //plugin for leakcanary
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
@@ -79,13 +95,10 @@ dependencies {
     }
 
     // android bootstrap
-    compile 'com.beardedhen:androidbootstrap:2.3.1'
+//    compile 'com.beardedhen:androidbootstrap:2.3.1'
 
     // add rxAndroid
     compile 'io.reactivex:rxandroid:1.2.1'
-// Because RxAndroid releases are few and far between, it is recommended you also
-// explicitly depend on RxJava's latest version for bug fixes and new features.
     compile 'io.reactivex:rxjava:1.1.6'
-
 
 }
