--- a/utilities/build.gradle
+++ b/utilities/build.gradle
@@ -5,8 +5,8 @@ apply plugin: 'com.android.library'
 apply from: 'versioning.gradle'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '23.0.2'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 23
@@ -25,9 +25,45 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.google.code.gson:gson:2.4'
     compile project(':datakitapi')
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile "com.mikepenz:iconics-core:2.8.1@aar"
+    compile 'com.android.support:appcompat-v7:25.1.1'
+
+    //plugin for icons
+    compile 'com.mikepenz:iconics-core:2.8.1@aar'
     compile 'com.mikepenz:fontawesome-typeface:4.7.0.0@aar'
+//    compile 'com.mikepenz:google-material-typeface:2.2.0.3.original@aar'
+
+    //plugin for fonts
+//    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+
+    //plugin for dialogbox
+    compile 'com.afollestad.material-dialogs:core:0.9.2.1'
+
+    //plugin for about dialog
+//    compile 'com.github.daniel-stoneuk:material-about-library:1.3.0'
+
+    //plugin for crashlytics
+/*
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
+        transitive = true;
+    }
+*/
+    //plugin for leakcanary
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+
+    //Material Drawer
+    compile('com.mikepenz:materialdrawer:5.8.1@aar') {
+        transitive = true
+    }
+
+    // android bootstrap
+//    compile 'com.beardedhen:androidbootstrap:2.3.1'
+
+    // add rxAndroid
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.1.6'
+
 }
