--- a/utilities/build.gradle
+++ b/utilities/build.gradle
@@ -5,11 +5,10 @@ apply plugin: 'com.android.library'
 apply from: 'versioning.gradle'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 28
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 25
+        targetSdkVersion 28
         versionCode buildVersionCode()
         versionName version
     }
@@ -24,21 +23,22 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.google.code.gson:gson:2.4'
-    compile project(':datakitapi')
-    compile 'com.android.support:appcompat-v7:25.1.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation project(':datakitapi')
 
     //plugin for icons
-    compile 'com.mikepenz:iconics-core:2.8.1@aar'
-    compile 'com.mikepenz:fontawesome-typeface:4.7.0.0@aar'
-    compile 'com.mikepenz:google-material-typeface:2.2.0.3.original@aar'
+    implementation 'com.mikepenz:iconics-core:2.8.1@aar'
+    implementation 'com.mikepenz:fontawesome-typeface:4.7.0.0@aar'
+    implementation 'com.mikepenz:google-material-typeface:2.2.0.3.original@aar'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
 
     //plugin for fonts
 //    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
 
     //plugin for dialogbox
-    compile 'com.afollestad.material-dialogs:core:0.9.2.1'
+    implementation 'com.afollestad.material-dialogs:core:0.9.2.1'
 
     //plugin for about dialog
 //    compile 'com.github.daniel-stoneuk:material-about-library:1.3.0'
@@ -50,12 +50,12 @@ dependencies {
     }
 */
     //plugin for leakcanary
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 
     //Material Drawer
-    compile('com.mikepenz:materialdrawer:5.8.1@aar') {
+    implementation('com.mikepenz:materialdrawer:5.8.1@aar') {
         transitive = true
     }
 
@@ -63,6 +63,7 @@ dependencies {
 //    compile 'com.beardedhen:androidbootstrap:2.3.1'
 
     // add rxAndroid
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.1.6'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex:rxjava:1.1.6'
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
 }
