--- a/utilities/src/main/AndroidManifest.xml
+++ b/utilities/src/main/AndroidManifest.xml
@@ -9,15 +9,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:theme="@style/app_theme_teal_light">
-        <activity
-            android:name="org.md2k.utilities.UI.ActivityAbout"
-            android:icon="@drawable/ic_info_teal_48dp"
-            android:label="About"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name="org.md2k.utilities.UI.ActivityCopyright"
-            android:icon="@drawable/ic_copyright_teal_48dp"
-            android:label="Copyright"
-            android:screenOrientation="portrait" />
+        <activity android:name=".dialog.ActivityDialog"></activity>
+        <activity android:name=".UI.ActivityCopyright"></activity>
     </application>
 </manifest>
